...
          tabBarLabelStyle: { fontSize: 10, fontWeight: '600', marginTop: 2, marginBottom: 8 },
          tabBarIconStyle: { marginTop: 8 },
        }}
      >
        <Tabs.Screen
          name="index"
          options={{ title: 'Dashboard', tabBarIcon: ({ color }) => <IcoDashboard color={color} /> }}
        />
        <Tabs.Screen
          name="colis"
          options={{ title: 'Colis', tabBarIcon: ({ color }) => <IcoPackage color={color} /> }}
        />
        <Tabs.Screen
          name="envoyer"
          options={{ title: 'Envois', tabBarIcon: ({ color }) => <IcoSend color={color} /> }}
        />
        <Tabs.Screen
          name="scanner"
          options={{
            title: '',
            tabBarButton: () => null,
...
